deploy/failfast/instance/resources/failfast-ci.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: failfast-ci
spec:
  rules:
  - host: jobs.failfast-ci.com
    http:
      paths:
      - backend:
          serviceName: failfast-ci
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - jobs.failfast-ci.com
    secretName: failfast-ci-com-tls
